Fix dark mode for Differential Keyboard Reference dialog
Summary:
Replace hardcoded background color `#ffffff` for items in the Keyboard Shortcuts navigation panel of Differential with variable `{$page.content}`.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Create a Differential revision
* Go to http://phorge.localhost/D1
* In the left upper corner, click that arrow thingie to Show Paths Panel
* At the bottom of that overlay panel, select "Keyboard Reference"
* Look at the navigation panel of the "Keyboard Shortcuts" overlay dialog

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26163

--- a/webroot/rsrc/css/phui/phui-list.css
+++ b/webroot/rsrc/css/phui/phui-list.css
@@ -132,7 +132,7 @@
 
 .phui-list-navbar-vertical .phui-list-item-href {
   display: block;
-  background: #ffffff;
+  background: {$page.content};
 }
 
 .phui-list-navbar .phui-list-item-selected .phui-list-item-href {
